[CacheStorage] Clean up CacheStorageCache lifetimes

CacheStorageCache refptrs are held in callbacks to cache operations, meaning that they won't be destructed
on profile shutdown.  This CL moves the refptrs to member variables so that they will.

BUG=617683

Review-Url: https://codereview.chromium.org/2040173002
Cr-Commit-Position: refs/heads/master@{#398529}

Former-commit-id: f9b13e0a9790f868a54ad4f3d1268d7369239ed4