content/browser/cache_storage/cache_storage_dispatcher_host.h
@@ -118,21 +118,21 @@ class CONTENT_EXPORT CacheStorageDispatcherHost : public BrowserMessageFilter {
   void OnCacheMatchCallback(
       int thread_id,
       int request_id,
-      scoped_refptr<CacheStorageCache> cache,
+      CacheID cache_id,
       CacheStorageError error,
       std::unique_ptr<ServiceWorkerResponse> response,
       std::unique_ptr<storage::BlobDataHandle> blob_data_handle);
   void OnCacheMatchAllCallbackAdapter(
       int thread_id,
       int request_id,
-      scoped_refptr<CacheStorageCache> cache,
+      CacheID cache_id,
       CacheStorageError error,
       std::unique_ptr<ServiceWorkerResponse> response,
       std::unique_ptr<storage::BlobDataHandle> blob_data_handle);
   void OnCacheMatchAllCallback(
       int thread_id,
       int request_id,
-      scoped_refptr<CacheStorageCache> cache,
+      CacheID cache_id,
       CacheStorageError error,
       std::unique_ptr<std::vector<ServiceWorkerResponse>> responses,
       std::unique_ptr<CacheStorageCache::BlobDataHandles> blob_data_handles);
@@ -144,17 +144,16 @@ class CONTENT_EXPORT CacheStorageDispatcherHost : public BrowserMessageFilter {
   void OnCacheKeysCallback(
       int thread_id,
       int request_id,
-      scoped_refptr<CacheStorageCache> cache,
+      CacheID cache_id,
       CacheStorageError error,
       std::unique_ptr<CacheStorageCache::Requests> requests);
   void OnCacheBatchCallback(int thread_id,
                             int request_id,
-                            scoped_refptr<CacheStorageCache> cache,
+                            CacheID cache_id,
                             CacheStorageError error);
 
-  // Hangs onto a scoped_refptr for the cache if it isn't already doing so.
-  // Returns a unique cache_id. Call DropCacheReference when the client is done
-  // with this cache.
+  // Hangs onto a scoped_refptr to |cache|. Returns a unique cache_id. Call
+  // DropCacheReference when the reference is no longer needed.
   CacheID StoreCacheReference(scoped_refptr<CacheStorageCache> cache);
   void DropCacheReference(CacheID cache_id);
 
